--- a/style1.css
+++ b/style1.css
@@ -172,3 +172,21 @@ section .container .active .signinBx .imgBx{
     color: white;
     border-radius: 10px;
 }
+a {
+    display: block;
+    color: rgb(10, 10, 10);
+    text-align: center;
+    padding: 10px;
+    margin-top: 0%;
+    text-decoration: none;
+    margin-left: 5px;
+    margin-right: 5px;
+    font-family: 'poppins',sans-serif;
+}
+a:hover {
+    background-color:purple;
+    color:white;
+    border-radius: 20px;
+    border: none;
+    display: block;
+}
